@@ -9,6 +9,7 @@ import flappy.functions.FlappySynthesizedFunction;
 import flappy.llms.ChatGPT;
 import io.github.cdimascio.dotenv.Dotenv;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
@@ -33,11 +34,11 @@ public class Law {
 
   public static void main(String[] args) throws ExecutionException, InterruptedException {
     Dotenv dotenv = Dotenv.load();
-    ChatGPT llm = new ChatGPT("gpt-3.5-turbo", new ChatGPT.ChatGPTConfig(dotenv.get("OPENAI_TOKEN"), dotenv.get("OPENAI_API_BASE")));
+    ChatGPT llm = new ChatGPT(new ChatGPT.ChatGPTConfig(null, dotenv.get("OPENAI_TOKEN"), dotenv.get("OPENAI_API_BASE")));
 
 
     FlappyBaseAgent lawAgent = new FlappyBaseAgent(
-      llm, List.of(lawGetMeta, lawGetLatestLawsuitsByPlaintiff)
+      llm, Arrays.asList(lawGetMeta, lawGetLatestLawsuitsByPlaintiff)
     );
 
 
