@@ -5,7 +5,7 @@ import flappy.LLMResponse;
 import flappy.llms.Dummy;
 import org.junit.jupiter.api.Test;
 
-import java.util.List;
+import java.util.Arrays;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
 
@@ -19,90 +19,119 @@ public class ResumeTestJava {
       switch (source) {
         case FlappyBaseAgent.AGENT_SOURCE:
           return new LLMResponse.Success(
-            """
-              [
-                 {
-                   "id": 1,
-                   "functionName": "getFrontendEngineerResumes",
-                   "args": {},
-                   "thought": "We need to retrieve all the frontend engineer resumes."
-                 },
-                 {
-                   "id": 2,
-                   "functionName": "getMeta",
-                   "args": {
-                     "text": "%@_1"
-                   },
-                   "thought": "We can extract the metadata from each resume."
-                 }
-               ]
-              """);
+            "[\n" +
+              "   {\n" +
+              "     \"id\": 1,\n" +
+              "     \"functionName\": \"getFrontendEngineerResumes\",\n" +
+              "     \"args\": {},\n" +
+              "     \"thought\": \"We need to retrieve all the frontend engineer resumes.\"\n" +
+              "   },\n" +
+              "   {\n" +
+              "     \"id\": 2,\n" +
+              "     \"functionName\": \"getMeta\",\n" +
+              "     \"args\": {\n" +
+              "       \"text\": \"%@_1\"\n" +
+              "     },\n" +
+              "     \"thought\": \"We can extract the metadata from each resume.\"\n" +
+              "   }\n" +
+              " ]\n");
       }
 
       if (source.equals(resumeGetMeta.getSource())) {
         return new LLMResponse.Success(
-          """
-            {
-                "name": "姓名",
-                "profession": "软件工程师",
-                "experienceYears": 7,
-                "skills": [
-                  {
-                    "name": "HTML",
-                    "proficiency": "熟练"
-                  },
-                  {
-                    "name": "CSS",
-                    "proficiency": "熟练"
-                  },
-                  {
-                    "name": "JavaScript",
-                    "proficiency": "熟练"
-                  },
-                  {
-                    "name": "React",
-                    "proficiency": "精通"
-                  },
-                  {
-                    "name": "Vue",
-                    "proficiency": "精通"
-                  },
-                  {
-                    "name": "Angular",
-                    "proficiency": "精通"
-                  }
-                ],
-                "projectExperiences": [
-                  {
-                    "title": "电商网站重构",
-                    "role": "前端技术负责人",
-                    "description": "负责参与了ABC公司旗下电商网站的重构项目，担任前端技术负责人。使用React框架重建网站前端，实现了页面响应式设计和动态加载功能，提升了用户体验。优化前端性能，减少了页面加载时间，提高了网站整体性能。设计并实施了用户行为跟踪和分析系统，为市场营销团队提供了关键的数据支持。"
-                  },
-                  {
-                    "title": "社交媒体应用开发",
-                    "role": "前端开发团队领导",
-                    "description": "领导一个四人的前端开发团队，从零开始开发了一款社交媒体应用。采用了Vue.js框架和Vuex进行状态管理，实现了实时聊天、帖子发布和用户互动功能。集成了第三方登录和分享功能，提升了用户注册和活跃度。成功将应用推向市场，用户数量从零增长到五万以上。"
-                  },
-                  {
-                    "title": "内部管理系统升级",
-                    "role": "系统升级负责人",
-                    "description": "负责升级公司内部管理系统，从传统的后端渲染转变为现代化的前后端分离架构。使用Angular框架开发新的前端界面，实现了快速的数据加载和交互功能。利用GraphQL优化了与后端的数据通信，减少了不必要的请求次数，提高了系统效率。通过培训和文档编写，帮助团队成员顺利过渡到新的技术栈。"
-                  }
-                ],
-                "education": {
-                  "degree": "学士学位",
-                  "fieldOfStudy": "计算机科学",
-                  "university": "北京大学",
-                  "year": "2012"
-                }
-              }
-                """.trim());
+          ("\n" +
+            "{\n" +
+            "  \"name\": \"John Doe\",\n" +
+            "  \"profession\": \"Software Engineer\",\n" +
+            "  \"experienceYears\": 7,\n" +
+            "  \"skills\": [\n" +
+            "    {\n" +
+            "      \"name\": \"HTML\",\n" +
+            "      \"proficiency\": \"Expert\"\n" +
+            "    },\n" +
+            "    {\n" +
+            "      \"name\": \"CSS\",\n" +
+            "      \"proficiency\": \"Expert\"\n" +
+            "    },\n" +
+            "    {\n" +
+            "      \"name\": \"JavaScript\",\n" +
+            "      \"proficiency\": \"Expert\"\n" +
+            "    },\n" +
+            "    {\n" +
+            "      \"name\": \"React\",\n" +
+            "      \"proficiency\": \"Expert\"\n" +
+            "    },\n" +
+            "    {\n" +
+            "      \"name\": \"Vue\",\n" +
+            "      \"proficiency\": \"Expert\"\n" +
+            "    },\n" +
+            "    {\n" +
+            "      \"name\": \"Angular\",\n" +
+            "      \"proficiency\": \"Expert\"\n" +
+            "    },\n" +
+            "    {\n" +
+            "      \"name\": \"Redux\",\n" +
+            "      \"proficiency\": \"Expert\"\n" +
+            "    },\n" +
+            "    {\n" +
+            "      \"name\": \"GraphQL\",\n" +
+            "      \"proficiency\": \"Expert\"\n" +
+            "    },\n" +
+            "    {\n" +
+            "      \"name\": \"Webpack\",\n" +
+            "      \"proficiency\": \"Expert\"\n" +
+            "    },\n" +
+            "    {\n" +
+            "      \"name\": \"Babel\",\n" +
+            "      \"proficiency\": \"Expert\"\n" +
+            "    },\n" +
+            "    {\n" +
+            "      \"name\": \"ESLint\",\n" +
+            "      \"proficiency\": \"Expert\"\n" +
+            "    },\n" +
+            "    {\n" +
+            "      \"name\": \"Agile\",\n" +
+            "      \"proficiency\": \"Expert\"\n" +
+            "    },\n" +
+            "    {\n" +
+            "      \"name\": \"Scrum\",\n" +
+            "      \"proficiency\": \"Expert\"\n" +
+            "    },\n" +
+            "    {\n" +
+            "      \"name\": \"Jira\",\n" +
+            "      \"proficiency\": \"Expert\"\n" +
+            "    }\n" +
+            "  ],\n" +
+            "  \"projectExperiences\": [\n" +
+            "    {\n" +
+            "      \"title\": \"E-commerce Website Refactoring (ABC Company)\",\n" +
+            "      \"role\": \"Front-end Technical Lead\",\n" +
+            "      \"description\": \"Participated in the refactoring project of an e-commerce website under ABC Company, rebuilt the website frontend using the React framework, implemented responsive design and dynamic loading features, optimized front-end performance, and designed and implemented a system for user behavior tracking and analysis.\"\n" +
+            "    },\n" +
+            "    {\n" +
+            "      \"title\": \"Social Media Application Development (XYZ Startup)\",\n" +
+            "      \"role\": \"Team Lead\",\n" +
+            "      \"description\": \"Led a four-person front-end development team, developed a social media application from scratch using the Vue.js framework and Vuex for state management, integrated third-party login and sharing features, and successfully launched the application to the market.\"\n" +
+            "    },\n" +
+            "    {\n" +
+            "      \"title\": \"Internal Management System Upgrade (DEF Enterprise)\",\n" +
+            "      \"role\": \"Front-end Developer\",\n" +
+            "      \"description\": \"Responsible for upgrading the company's internal management system, developed a new front-end interface using the Angular framework, optimized data communication with the back-end using GraphQL, and facilitated the transition of team members to the new technology stack through training and documentation.\"\n" +
+            "    }\n" +
+            "  ],\n" +
+            "  \"education\": {\n" +
+            "    \"degree\": \"Bachelor's Degree\",\n" +
+            "    \"fieldOfStudy\": \"Computer Science\",\n" +
+            "    \"university\": \"Peking University\",\n" +
+            "    \"year\": 2012\n" +
+            "  }\n" +
+            "}\n").trim());
       }
       return new LLMResponse.Success("");
     }));
 
     FlappyBaseAgent resumeAgent = new FlappyBaseAgent(
-      dummy, List.of(resumeGetMeta, getFrontendEngineerResumes)
+      dummy, Arrays.asList(resumeGetMeta, getFrontendEngineerResumes)
     );
 
     Future<ResumeMetaReturn> returnFuture = resumeAgent.executePlanAsync(RESUME_EXECUTE_PLAN_PROMPT);
